# Vizora

./: .gitignore  AGENTS.md  PLAN.md  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml  portless.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_camera_source_fields.py
backend/api/: deps.py  main.py
backend/api/routes/: analytics.py  auth.py  cameras.py  evidence.py  models.py  process.py  violations.py
backend/api/schemas/: violation.py
backend/configs/: camera_scenes.example.yaml  model_profiles.example.yaml
backend/core/: auth.py  camera_state.py  config.py  database.py  model_registry.py  realtime.py  storage.py
backend/core/models/: __init__.py  camera.py  organization.py  processing_log.py  violation.py
backend/pipeline/: contracts.py  device.py  infer.py  scene.py  warmup.py
backend/pipeline/anpr/: pipeline.py
backend/pipeline/classify/: classifiers.py
backend/pipeline/detect/: detector.py
backend/pipeline/evidence/: annotator.py  hashchain.py  packet.py
backend/pipeline/ingest/: worker.py
backend/pipeline/pose/: pose_estimator.py
backend/pipeline/preprocess/: service.py
backend/pipeline/track/: tracker.py
backend/pipeline/violation/: engine.py  temporal.py
backend/pipeline/vlm/: describer.py
backend/runs/detect/models/anpr/plate_base/: args.yaml  results.csv
backend/runs/detect/train/: args.yaml  results.csv
backend/scripts/: benchmark.py
backend/tests/: conftest.py  test_annotator.py  test_auth.py  test_hashchain.py  test_temporal.py  test_violation_engine.py
frontend/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.e2e.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/cameras/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/process/: page.tsx
frontend/src/app/review-queue/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/violations/: page.tsx
frontend/src/components/analytics/: violation-hotspot-map.tsx
frontend/src/components/brand/: vizora-icon.tsx
frontend/src/components/dashboard/: dashboard-shell.tsx
frontend/src/components/landing/: cta-section.tsx  evidence-section.tsx  features-section.tsx  footer.tsx  hero-section.tsx  models-section.tsx  (+2 more)
frontend/src/lib/: api.ts  auth-context.tsx  org-settings.ts  types.ts
frontend/tests/e2e/: process-api.test.ts
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
scripts/: judge-setup.ps1  package-submission.ps1  start-demo-rtsp.ps1  stop-demo-rtsp.ps1
training/: README.md  pyproject.toml
training/configs/: training.yaml
training/modal/: app.py
training/scripts/: download_pretrained_models.py  evaluate_model.py  export_artifacts.py  prepare_datasets.py  smoke_test_training.py  smoke_test_weights.py  train_rtdetrv2_detector.py  train_yolo_detector.py  train_yolo_plate.py  train_yolo_seatbelt_detector.py  upload_to_hf.py
(+1 files in other folders)
