[project]
name = "traffic-violation-detection"
version = "0.1.0"
description = "Automated photo identification and classification of traffic violations using computer vision"
readme = "README.md"
authors = [
    { name = "codex-mohan", email = "codexmohan@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.2",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.7.0",
    "paddlepaddle==3.2.2",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "ultralytics>=8.4.71",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
tvds = "api.main:app"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "api"
module-root = ""

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
]
