[project]
name = "traffic-violation-detection"
version = "0.1.0"
description = "Automated photo identification and classification of traffic violations using computer vision"
readme = "README.md"
authors = [
    { name = "codex-mohan", email = "codexmohan@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.2",
    "minio>=7.2.0",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.7.0",
    "paddlepaddle==3.2.2",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "ultralytics>=8.4.71",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[project.scripts]
tvds = "api.main:app"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
name = "pytorch-cuda"

[tool.uv.build-backend]
module-name = "api"
module-root = ""

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=8.0.0",
    "bcrypt<4.1",
]
