[project]
name = "gridlock-training"
version = "0.1.0"
description = "Training pipeline for Gridlock traffic violation detection models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "ultralytics>=8.1",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "Pillow>=10.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "huggingface_hub>=0.20",
    "modal>=0.62",
    "pydantic>=2.0",
    "rich>=13.0",
    "onnx>=1.16",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
